# ticketless_park_system

./: .gitignore  LICENSE  QUICKSTART.md  README.md  docker-compose.innsbruck.yml  docker-compose.test.yml  docker-compose.vienna.yml  docker-compose.yml  http_load_test.py  main.tf  nats_load_test.py  pyproject.toml
docker_compose_tests/: docker-compose.graz.yml  docker-compose.innsbruck.yml  docker-compose.salzburg.yml  docker-compose.vienna.yml
evaluation_tests/test1_akka/: akka_load_test.py
evaluation_tests/test1_akka/akka_test_results/: aggregate.json  step01.json  step04.json  step06.json  step09.json  step10.json  step11.json  step13.json
evaluation_tests/test1_http/http_test_results/: step02.json  step03.json  step05.json  step07.json  step08.json  step12.json
evaluation_tests/test2_webserver/: HeyLoadTest.ps1  nginx_5rpw_test.txt  webserver_step_test.py
evaluation_tests/test2_webserver/tc2_html_curve/: aggregateForRoot.csv  step01_rps200__.txt  step02_rps400__.txt  step03_rps800__.txt  step04_rps1200__.txt  step05_rps1600__.txt  step06_rps2000__.txt  step07_rps2400__.txt  step08_rps2800__.txt  step09_rps3200__.txt
evaluation_tests/test2_webserver/tc2_js_curve_c16/: aggregateForJS.csv  step01_rps5__assets_index_u5eV4oN_js.txt  step02_rps10__assets_index_u5eV4oN_js.txt  step03_rps12__assets_index_u5eV4oN_js.txt  step04_rps14__assets_index_u5eV4oN_js.txt  (+10 more)
presentation/: main.tex
report/: main.tex
report/assets/: HeyLoadTest.ps1  architecture.excalidraw  diagrams.excalidraw  nginx_test.txt
src/ticketless_parking_system/: edge_server.py
(+67 files in other folders)
